adding notification-service , setting up the profiles + adding docker compose + adding automatic creation and pushing of module's image + adding grafana and prometheus